--- a/exercises/html_css_exercise_1a/styles.css
+++ b/exercises/html_css_exercise_1a/styles.css
@@ -9,15 +9,14 @@ body{
       margin-left:auto;
       margin-right: auto;
       margin-top: 15em;
-    
-      box-shadow: 0px 5px 10px grey;
+      box-shadow: 0px 0px 6px grey;
       width: 400px;
       height: 400px;
       background-color: #d6ddf2;
     }
     
     h1{
-      padding-top: 25px;
+      padding-top: 30px;
       margin-bottom: -15px;
     }
     
@@ -31,9 +30,9 @@ body{
       float: center;
       margin-right: 5px;
       position:absolute;
-      margin-left: -65px;
+      margin-left: -70px;
       text-decoration: none;
-      margin-top: 22px;
+      margin-top: 10px;
       color: grey;
     }
     
@@ -44,8 +43,8 @@ body{
       border-right-style: hidden;
       border-left-style: hidden;
       border-bottom-style: groove;
-      margin: 15px;
-      padding: 10px 0;
+      margin: 10px;
+      padding: 5px;
     }
     
     input::placeholder{
@@ -57,7 +56,7 @@ body{
     #submit{
       background-color: #EEF7FA;
       border: 2px solid darkblue;
-      padding: 10px;
+      padding: 5px 10px;
       font-family: 'Indie Flower', cursive;
       font-size: 25px;
     }
@@ -65,4 +64,17 @@ body{
     a{
       text-decoration: none;
     }
+
+    #submit:hover{
+      color: #EEF7FA;
+      background-color: darkblue;
+    }
     
+
+    #noAccount:hover{
+      text-decoration: underline;
+    }
+
+    #forgotPassword:hover{
+      color:black;
+    }
