--- a/exercises/html_css_exercise_1b/styles.css
+++ b/exercises/html_css_exercise_1b/styles.css
@@ -7,7 +7,7 @@ body{
     background-color: lightgrey;
     text-align: center;
     width: 30%;
-    height: 300px;
+    height: 20em;
     margin: auto;
     margin-top: 10rem;
     padding: 15px 50px;
@@ -20,7 +20,7 @@ h1{
 .input{
     margin: 10px 0;
     width: 100%;
-    height: 40px;
+    height: 2em;
     font-size: large;
     text-indent: 15px;
     border-style: hidden;
@@ -53,3 +53,19 @@ button{
     font-size: large;
     font-family: 'Lobster', cursive;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .box{
+        width: 70%;
+    }
+
+    form{
+        transform: scale(.9);
+    }
+  }
+
+  button:hover{
+    color: paleturquoise;
+    background-color: teal;
+  }
