--- a/exercises/html_css_exercise_1a/styles.css
+++ b/exercises/html_css_exercise_1a/styles.css
@@ -10,8 +10,8 @@ body{
       margin-right: auto;
       margin-top: 15em;
       box-shadow: 0px 0px 6px grey;
-      width: 400px;
-      height: 400px;
+      width: 30em;
+      height: 30em;
       background-color: #d6ddf2;
     }
     
